# MathLibrary

./: CMakeLists.txt  CorePhysics.hpp  MathFunctions.cpp  MathFunctions.hpp  Readme.md  Transform.cpp  Transform.hpp  World.cpp  World.hpp
3D Math Primer for Graphics and Game Development 07cac56069df469eaa1478e08bbd2491/: Cartesian stuff 2D 0be3f8032760450cac32e6202dfbeee6.md  Intro to matrices 134339de17954817a6b5f5186bfa3e33.md  Linear Transformation using matrices 2b303c764a1e45928de5b008a85d812f.md  More on matrices e7f31fa603c441e4b623f11c60cc923b.md  Multiple coordonate spaces 56cd70ee09404c46a0975fb8b78f5995.md  Polar space 0194bec0e79a4841a99d90147999886a.md  Rotation in Three Dimensions 335c2ec819e24159afa21ee58200864b.md  Vectors 56f41f4773274db683a3df3663fc2580.md
